# packages/api-contracts/openapi.json
@@ -296,57 +296,6 @@
                             "enum": ["highContrastProperties"],
                             "example": "highContrastProperties"
                         }
-                    },
-                    "scanDefinitions": {
-                        "type": "array",
-                        "items": {
-                            "type": "object",
-                            "description": "Definition for the additional scanner.",
-                            "required": ["name"],
-                            "properties": {
-                                "name": {
-                                    "type": "string",
-                                    "enum": ["accessibility-agent"],
-                                    "example": "accessibility-agent"
-                                },
-                                "args": {
-                                    "type": "object",
-                                    "description": "Parameters to provide to the scanner for execution.",
-                                    "properties": {
-                                        "string": {
-                                            "type": "string",
-                                            "example": "value"
-                                        },
-                                        "integer": {
-                                            "type": "integer",
-                                            "example": 1
-                                        },
-                                        "boolean": {
-                                            "type": "boolean",
-                                            "example": true
-                                        }
-                                    }
-                                },
-                                "options": {
-                                    "type": "object",
-                                    "description": "Parameters to configure the service for controlling scanner execution.",
-                                    "properties": {
-                                        "string": {
-                                            "type": "string",
-                                            "example": "value"
-                                        },
-                                        "integer": {
-                                            "type": "integer",
-                                            "example": 1
-                                        },
-                                        "boolean": {
-                                            "type": "boolean",
-                                            "example": true
-                                        }
-                                    }
-                                }
-                            }
-                        }
                     }
                 }
             },
@@ -449,8 +398,7 @@
                             "properties": {
                                 "name": {
                                     "type": "string",
-                                    "enum": ["accessibility-agent"],
-                                    "example": "accessibility-agent"
+                                    "example": "custom-scanner"
                                 },
                                 "state": {
                                     "$ref": "#/components/schemas/RunState"
@@ -487,7 +435,7 @@
                     },
                     "source": {
                         "type": "string",
-                        "enum": ["accessibility-agent", "accessibility-scan", "accessibility-combined", "privacy-scan"],
+                        "enum": ["accessibility-scan", "accessibility-combined", "privacy-scan"],
                         "example": "accessibility-scan"
                     },
                     "links": {
